--- a/manifest.json
+++ b/manifest.json
@@ -8,32 +8,50 @@
     "theme_color": "#343a40",
     "icons": [
         {
-            "src": "img/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
+            "src": "icons/maskable_icon_x48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "purpose": "any"
         },
         {
-            "src": "img/icon-192x192.png",
+            "src": "icons/maskable_icon_x72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "icons/maskable_icon_x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "icons/maskable_icon_x128.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "icons/maskable_icon_x192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         }
     ],
     "screenshots": [
         {
-            "src": "img/screenshot-wide.jpg",
-            "sizes": "1280x720",
+            "src": "background.png",
+            "sizes": "1850x864",
             "type": "image/jpg",
-            "form_factor": "wide"
+            "form_factor": "wide",
+            "label": "Background"
         },
         {
-            "src": "img/screenshot-mobile.jpg",
-            "sizes": "720x1280",
-            "type": "image/jpg"
+            "src": "background.png",
+            "sizes": "1850x864",
+            "type": "image/jpg",
+            "form_factor": "narrow",
+            "label": "Background"
         }
     ]
 }
